--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,7 @@
         runs-on: ubuntu-latest
         steps:
           - uses: actions/checkout@v2
-          - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p '${{ secrets.DOCKER_PASSWORD }}'
           - run: docker build -t brianstv/docker-react -f Dockerfile.dev .
           - run: docker run -e CI=true brianstv/docker-react npm test
 
